--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
----
-layout: default
----
+﻿<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
 
-Welcome to Manifold Learning: {{site.description}}
+    <title>Daniel's New Website</title>
 
-{% include table-of-contents.html %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+    <div class="outerContainer">
+        <div id="story" class="container">
+            <div class="header">
+                <h1>Daniel's New Website</h1>
+                <h2 class="byline"></h2>
+            </div>
+        </div>
+    </div>
+
+    <script src="ink.js"></script>
+    <script src="homepage.js"></script>
+    <script src="main.js"></script>
+</body>
+</html>
